# krfiles

./: .editorconfig  .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: Cargo.toml  build.rs
cli/native/: krfiles_shim.c  libkrfiles_api.h
cli/src/: ffi.rs  main.rs  models.rs
docs/: index.html
examples/node/: index.mjs  package.json
gradle/: libs.versions.toml
lib/: MODULE.md  build.gradle.kts
lib/dokka/: styles.css
lib/src/commonMain/kotlin/dev/rolandh/krfiles/: AuthManager.kt  FilebrowserClient.kt  Models.kt
lib/src/commonTest/kotlin/dev/rolandh/krfiles/: AuthManagerTest.kt  FilebrowserClientIntegrationTest.kt  FilebrowserClientTest.kt
lib/src/jsMain/kotlin/dev/rolandh/krfiles/: JsFilebrowserClient.kt  PlatformAuthStorage.js.kt
lib/src/jsTest/kotlin/dev/rolandh/krfiles/: TestUtils.kt
lib/src/jvmMain/kotlin/dev/rolandh/krfiles/: PlatformAuthStorage.jvm.kt
lib/src/jvmTest/kotlin/dev/rolandh/krfiles/: TestUtils.kt
lib/src/linuxX64Main/kotlin/dev/rolandh/krfiles/: PosixUtils.kt
lib/src/nativeMain/kotlin/dev/rolandh/krfiles/: NativeExports.kt  PlatformAuthStorage.native.kt  PosixUtils.kt
lib/src/nativeTest/kotlin/dev/rolandh/krfiles/: TestUtils.kt
